Bug fix to make privacy policy links visible.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -234,6 +234,16 @@ footer {
     }
 }
 
+.gdpr-footer {
+    background-color: darken(@color-swatch2, 10%);
+    padding: 15px 0;
+    
+    a {
+        padding: 0 10px;
+    	color: @color-swatch6;
+    }
+}
+
 /* ===============================
    LANGUAGE SELECTOR
    =============================== */
